finishing responsive nav bar and starting work on about, skills and resume sections

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 </head>
 <body>
   <header>
+    <!-- NOTE NAV BAR -->
     <nav id="navBar" class="row g-0">
       <div id="navProfileBox" class="col-12 row g-0">
         <div id="navProfileItems" class="col-8">
           <img id="navProfileImage" src="./images/profilePicture.jpg" alt="">
-          <span>Marcos Emmanuel López</span>
+          <span>Marcos López</span>
         </div>
         <div id="navProfileMenu" class="col-3 material-icons">menu</div>
       </div>
@@ -35,8 +36,147 @@
       </div>
     </nav>    
   </header>
-  
-  <!-- NOTE BOOTSTRAP SCRIPT -->
+  <main>
+    <!-- NOTE ABOUT ME -->
+    <section id="aboutMeContainer" class="row g-0">
+      <div id="aboutProfile" class="col-lg-4 col-11">
+        <img id="aboutProfileImage" src="./images/profilePicture.jpg" alt="">
+        <h5 id="title">MARCOS EMMANUEL LÓPEZ</h5>
+        <p id="text">My name is Marcos López, i'm a 28 years old Argentinean hardware technician, full stack developer student, technology passionate and coffee enthusiast.</br></br>
+          My hobbies include reading, playing videogames and complain about my favourite football team.</br></br>
+          I'm in the process of discovering this wonderful world of development and, even though still learning, i'm already in love with it!.</p>
+          <span id="separatorPurple"></span>
+      </div>
+      <div id="aboutSkills" class="col-lg-7 col-11">
+        <h6 id="title">Developer Skills</h6>
+        <div id="SkillProgress">
+          <span id="subTitle">HTML</span>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">90%</div>
+          </div>
+        </div>
+        <div id="SkillProgress">
+          <span id="subTitle">CSS</span>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">80%</div>
+          </div>
+        </div>
+        <div id="SkillProgress">
+          <span id="subTitle">JAVASCRIPT</span>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%">65%</div>
+          </div>
+        </div>
+        <div id="SkillProgress">
+          <span id="subTitle">REACTJS</span>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">60%</div>
+          </div>
+        </div>
+        <div id="SkillProgress">
+          <span id="subTitle">FLEXBOX</span>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%">95%</div>
+          </div>
+        </div>
+        <div id="SkillProgress">
+          <span id="subTitle">BOOTSTRAP</span>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">75%</div>
+          </div>
+        </div>
+        <div id="SkillProgress">
+          <span id="subTitle">SCRUM</span>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%">95%</div>
+          </div>
+        </div>
+        <div id="SkillProgress">
+          <span id="subTitle">MONGODB</span>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">40%</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div id="gradientSeparator"></div>
+    <!-- NOTE RESUME -->
+    <section id="resumeContainer" class="row g-0">
+      <div id="resumeTitleBox" class="col-12 text-center g-0">
+        <h1>RESUME</h1>
+      </div>
+      <div id="resumeRow1" class="col-lg-6 col-12 row">
+        <div id="resumeBox" class="col-12">
+          <h3 class="resumeTitle">Summary</h3>
+          <span class="resumeLabel">MARCOS EMMANUEL LÓPEZ</span>
+          <ul class="resumeUL">
+            <li class="resumeLI">Gobernador Fernando Riera 247 Street, Las Talitas, Tucumán, Argentina.</li>
+            <li class="resumeLI">+54 (0381) 156675480</li>
+            <li class="resumeLI">emmanuel.m.lopez@gmail.com</li>
+          </ul>
+        </div>
+        <div id="resumeBox" class="col-12">
+          <h3 class="resumeTitle">Education</h3>
+          <span class="resumeLabel">FULL STACK DEVELOPER</span>
+          <span class="resumeSmallLabel">2021-Present</span>
+          <span class="resumeSmallLabel">RollingCode School</span>
+          <ul class="resumeUL">
+            <li class="resumeLI">Frontend + Backend (HTML, CSS, JAVASCRIPT, REACTJS, NODEJS, MONGODB)</li>
+            <li class="resumeLI">Full application of Scrum methodology and it's roots.</li>
+            <li class="resumeLI">Use of tools like Slack, GitHub, Drive, Trello, Mural, etc.</li>
+          </ul>
+          <span class="resumeLabel">ENGLISH TRANSLATOR TECHNICIAN</span>
+          <span class="resumeSmallLabel">2019-Present</span>
+          <span class="resumeSmallLabel">Instituto Superior Almafuerte</span>
+          <ul class="resumeUL">
+            <li class="resumeLI">Translation and interpretation of the English language (to spanish) on a technical level.</li>
+          </ul>
+          <span class="resumeLabel">HIGH SCHOOL BACHELOR'S DEGREE</span>
+          <span class="resumeSmallLabel">2006-2010</span>
+          <span class="resumeSmallLabel">Colegio Santo Tomás</span>
+          <ul class="resumeUL">
+            <li class="resumeLI">High school Bachelor's degree on a local school of my province.</li>
+          </ul>
+        </div>
+      </div>
+      <div id="resumeRow2" class="col-lg-6 col-12 row">
+        <div id="resumeBox" class="col-12">
+          <h3 class="resumeTitle">Job Experiences</h3>
+          <span class="resumeLabel">IT MANAGER</span>
+          <span class="resumeSmallLabel">2021-Present</span>
+          <span class="resumeSmallLabel">Noroeste Nutrición S.R.L.</span>
+          <ul class="resumeUL">
+            <li class="resumeLI">In charge of IT on the different areas of the company.</li>
+            <li class="resumeLI">Monitoring, maintenance and reparation of hardware, WLAN and LAN networks, VOIP services, etc.</li>
+            <li class="resumeLI">Responsible of the correct functioning of the company on an IT level on it's everyday routine.</li>
+          </ul>
+          <span class="resumeLabel">IT, DATA AND TECHNICAL SUPPORT MANAGER</span>
+          <span class="resumeSmallLabel">2017-2021</span>
+          <span class="resumeSmallLabel">Connet S.R.L.</span>
+          <ul class="resumeUL">
+            <li class="resumeLI">In charge of IT and technical support of the different clients of the company.</li>
+            <li class="resumeLI">Installation and configuration of different management, billing and stock softwares.</li>
+            <li class="resumeLI">Installation and configuration of different hardwares on several clients of the company, following their data structure.</li>
+            <li class="resumeLI">Handling and configuration of hardware from different brands like Mikrotik, Ubiquiti, HP, etc.</li>
+            <li class="resumeLI">Implementation of IP PBXs based on Asterisk technology. Configuration of FXO, FXS and GSM hardwares on brands like Dinstar, Synway, GrandStream, etc.</li>
+            <li class="resumeLI">Implementation and configuration of network structures through cable, wireless (Ubiquiti's Rockets, Powerbeams, Litebeams, etc.) or optic fiber (including OLT's and GPON's from different brands).</li>
+            <li class="resumeLI">Installation, configuration and maintenance of CCTV systems from different brands like Hikvision, Dahua, GrandStream, etc.</li>
+          </ul>
+          <span class="resumeLabel">WEB DEVELOPMENT INTERNSHIP</span>
+          <span class="resumeSmallLabel">2010-2014</span>
+          <span class="resumeSmallLabel">n-Soluciones</span>
+          <ul class="resumeUL">
+            <li class="resumeLI">Creation of web pages for different local clienvts.</li>
+            <li class="resumeLI">File uploads, information dump, design and location.</li>
+            <li class="resumeLI">Maintenance of different web pages, updates, renewal of information, bugs solutions, etc.</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <div id="gradientSeparatorBack"></div>
+  </main>
+
+    <!-- NOTE BOOTSTRAP SCRIPT -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <!-- NOTE MY OWN SCRIPT -->
   <script src="./js/app.js"></script>
