--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <title>Marcos Lopez CV</title>
 </head>
 <body>
-  <header>
+  <header id="header">
     <!-- NOTE NAV BAR -->
     <nav id="navBar" class="row g-0">
       <div id="navProfileBox" class="col-12 row g-0">
@@ -29,10 +29,10 @@
         <div id="navProfileMenu" class="col-3 material-icons">menu</div>
       </div>
       <div id="navItemsBox" class="col-lg-6 col-12 row g-0">
-        <span id="navItem" class="col-lg-3 col-12">SOFT/HARD SKILLS</span>
-        <span id="navItem" class="col-lg-3 col-12">ABOUT ME</span>
-        <span id="navItem" class="col-lg-3 col-12">RESUME</span>
-        <span id="navItem" class="col-lg-3 col-12">MY PORTFOLIO</span>
+        <a href="#aboutMeContainer"><span id="navItem" class="col-lg-3 col-12">ABOUT ME</span></a>
+        <a href="#resumeContainer"><span id="navItem" class="col-lg-3 col-12">RESUME</span></a>
+        <a href="#!"><span id="navItem" class="col-lg-3 col-12">MY PORTFOLIO</span></a>
+        <a href="#!"><span id="navItem" class="col-lg-3 col-12">SOFT/HARD SKILLS</span></a>
       </div>
     </nav>    
   </header>
