fixing the margin of the resume section

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
     <div id="gradientSeparator"></div>
     <!-- NOTE RESUME -->
     <section id="resumeContainer" class="row g-0">
-      <div id="resumeTitleBox" class="col-12 text-center g-0">
+      <div id="resumeTitleBox" class="col-11 text-center g-0">
         <h1>RESUME</h1>
       </div>
-      <div id="resumeRow1" class="col-lg-6 col-12 row">
-        <div id="resumeBox" class="col-12">
+      <div id="resumeRow1" class="col-lg-6 col-11 row g-0">
+        <div id="resumeBox" class="col-11">
           <h3 class="resumeTitle">Summary</h3>
           <span class="resumeLabel">MARCOS EMMANUEL LÓPEZ</span>
           <ul class="resumeUL">
@@ -115,7 +115,7 @@
             <li class="resumeLI">emmanuel.m.lopez@gmail.com</li>
           </ul>
         </div>
-        <div id="resumeBox" class="col-12">
+        <div id="resumeBox" class="col-11">
           <h3 class="resumeTitle">Education</h3>
           <span class="resumeLabel">FULL STACK DEVELOPER</span>
           <span class="resumeSmallLabel">2021-Present</span>
@@ -139,8 +139,8 @@
           </ul>
         </div>
       </div>
-      <div id="resumeRow2" class="col-lg-6 col-12 row">
-        <div id="resumeBox" class="col-12">
+      <div id="resumeRow2" class="col-lg-6 col-11 row g-0">
+        <div id="resumeBox" class="col-11">
           <h3 class="resumeTitle">Job Experiences</h3>
           <span class="resumeLabel">IT MANAGER</span>
           <span class="resumeSmallLabel">2021-Present</span>
