starting work on the portfolio section

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
       </div>
     </section>
-    <div id="gradientSeparator"></div>
+    <div id="gradientSeparatorY"></div>
     <!-- NOTE RESUME -->
     <section id="resumeContainer" class="row g-0">
       <div id="resumeTitleBox" class="col-11 text-center g-0">
@@ -173,7 +173,42 @@
         </div>
       </div>
     </section>
-    <div id="gradientSeparatorBack"></div>
+    <div id="gradientSeparatorW"></div>
+    <!-- NOTE PROJECTS -->
+    <section id="projectsContainer" class="row g-0">
+      <div id="projectsTitleBox" class="col-11 text-center g-0">
+        <h1>MY PROJECTS</h1>
+      </div>
+      <div id="projectBox1" class="col-11">
+        <div id="projectTopItem">
+          <h1 id="boxNumber">01</h1>
+        </div>
+        <div id="projectBottomItem">
+          <h5 id="boxContent">OREJITAS CALLEJERAS</h5>
+          <h6 id="boxContent">HTML, CSS AND BOOTSTRAP</h6>
+          <div id="lightButton">SEE PROJECT</div>
+        </div>
+      </div>
+      <div id="projectBox2" class="col-11">
+        <div id="projectTopItem">
+          <h1 id="boxNumber">02</h1>
+        </div>
+        <div id="projectBottomItem">
+          <h5 id="boxContent">BOOTSTRAP PROJECT</h5>
+          <h6 id="boxContent">HTML, CSS AND BOOTSTRAP</h6>
+        </div>
+      </div>
+      <div id="projectBox3" class="col-11">
+        <div id="projectTopItem">
+          <h1 id="boxNumber">03</h1>
+        </div>
+        <div id="projectBottomItem">
+          <h5 id="boxContent">BOOTSTRAP PROJECT</h5>
+          <h6 id="boxContent">HTML, CSS AND BOOTSTRAP</h6>
+        </div>
+      </div>
+    </section>
+    
   </main>
 
     <!-- NOTE BOOTSTRAP SCRIPT -->
