--- a/index.html
+++ b/index.html
@@ -180,37 +180,42 @@
         <h1>MY PROJECTS</h1>
       </div>
       <div id="projectBox1" class="col-11">
-        <div id="projectTopItem">
+        <div id="projectTopItem1">
           <h1 id="boxNumber">01</h1>
         </div>
-        <div id="projectBottomItem">
+        <div id="projectBottomItem1">
           <h5 id="boxContent">OREJITAS CALLEJERAS</h5>
           <h6 id="boxContent">HTML, CSS AND BOOTSTRAP</h6>
           <div id="lightButton">SEE PROJECT</div>
         </div>
       </div>
       <div id="projectBox2" class="col-11">
-        <div id="projectTopItem">
+        <div id="projectTopItem2">
           <h1 id="boxNumber">02</h1>
         </div>
-        <div id="projectBottomItem">
-          <h5 id="boxContent">BOOTSTRAP PROJECT</h5>
-          <h6 id="boxContent">HTML, CSS AND BOOTSTRAP</h6>
+        <div id="projectBottomItem2">
+          <h5 id="boxContent">JAVASCRIPT PROJECT</h5>
+          <h6 id="boxContent">HTML, CSS, JAVASCRIPT</h6>
+          <div id="lightButton">SEE PROJECT</div>
         </div>
       </div>
       <div id="projectBox3" class="col-11">
-        <div id="projectTopItem">
+        <div id="projectTopItem3">
           <h1 id="boxNumber">03</h1>
         </div>
-        <div id="projectBottomItem">
-          <h5 id="boxContent">BOOTSTRAP PROJECT</h5>
-          <h6 id="boxContent">HTML, CSS AND BOOTSTRAP</h6>
+        <div id="projectBottomItem3">
+          <h5 id="boxContent">FINAL PROJECT</h5>
+          <h6 id="boxContent">HTML, CSS, BOOTSTAP, REACTJS, MONGODB</h6>
+          <div id="lightButton">SEE PROJECT</div>
         </div>
       </div>
-    </section>
-    
+    </section>    
   </main>
-
+  <footer id="footerContainer">
+    <div id="footerBox">
+      
+    </div>
+  </footer>
     <!-- NOTE BOOTSTRAP SCRIPT -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <!-- NOTE MY OWN SCRIPT -->
