finishing projects section and footer section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div id="navItemsBox" class="col-lg-6 col-12 row g-0">
         <a href="#aboutMeContainer"><span id="navItem" class="col-lg-3 col-12">ABOUT ME</span></a>
         <a href="#resumeContainer"><span id="navItem" class="col-lg-3 col-12">RESUME</span></a>
-        <a href="#!"><span id="navItem" class="col-lg-3 col-12">MY PORTFOLIO</span></a>
+        <a href="#projectsContainer"><span id="navItem" class="col-lg-3 col-12">MY PORTFOLIO</span></a>
         <a href="#!"><span id="navItem" class="col-lg-3 col-12">SOFT/HARD SKILLS</span></a>
       </div>
     </nav>    
@@ -212,8 +212,22 @@
     </section>    
   </main>
   <footer id="footerContainer">
+    <div id="footerPolygon"></div>
     <div id="footerBox">
-      
+      <div id="anchor">↑</div>
+      <div id="footerSocials">        
+        <div id="github"></div>
+        <div id="linkedin"></div>
+        <div id="youtube"></div>
+      </div>
+      <div id="footerRights">
+        <span id="footerLogo">ML</span>
+        <span id="rights">© Drechos Reservados <br>
+        Marcos Emmanuel López</span>
+      </div>
+      <div id="floatingMenu">
+        <div id="floatingBurguer"></div>
+      </div>
     </div>
   </footer>
     <!-- NOTE BOOTSTRAP SCRIPT -->
