finishing footer section and making floating menu

--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
           <div id="lightButton">SEE PROJECT</div>
         </div>
       </div>
+      <hr class="col-8">
       <div id="projectBox2" class="col-11">
         <div id="projectTopItem2">
           <h1 id="boxNumber">02</h1>
@@ -199,6 +200,7 @@
           <div id="lightButton">SEE PROJECT</div>
         </div>
       </div>
+      <hr class="col-8">
       <div id="projectBox3" class="col-11">
         <div id="projectTopItem3">
           <h1 id="boxNumber">03</h1>
@@ -209,12 +211,21 @@
           <div id="lightButton">SEE PROJECT</div>
         </div>
       </div>
-    </section>    
+    </section>
+    <!-- NOTE FLOATING MENU -->
+    <div id="floatingMenu" class="material-icons">menu</div>
+    <div id="navItemsBoxFloat" class="">
+      <a id="navItemFloat" href="#aboutMeContainer"><div class="">ABOUT ME</div></a>
+      <a id="navItemFloat" href="#resumeContainer"><div class="">RESUME</div></a>
+      <a id="navItemFloat" href="#projectsContainer"><div class="">MY PORTFOLIO</div></a>
+      <a id="navItemFloat" href="#!"><div class="">SOFT/HARD SKILLS</div></a>
+    </div>
   </main>
+  <!-- NOTE FOOTER -->
   <footer id="footerContainer">
     <div id="footerPolygon"></div>
     <div id="footerBox">
-      <div id="anchor">↑</div>
+      <a href="#aboutMeContainer"><div id="anchor">↑</div></a>
       <div id="footerSocials">        
         <div id="github"></div>
         <div id="linkedin"></div>
@@ -225,9 +236,9 @@
         <span id="rights">© Drechos Reservados <br>
         Marcos Emmanuel López</span>
       </div>
-      <div id="floatingMenu">
+      <!-- <div id="floatingMenu">
         <div id="floatingBurguer"></div>
-      </div>
+      </div> -->
     </div>
   </footer>
     <!-- NOTE BOOTSTRAP SCRIPT -->
