fixing hero section background and color corrections

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
         </div>
       </div>
     </section>
-    <div id="gradientSeparatorY"></div>
+    <!-- <div id="gradientSeparatorY"></div> -->
     <!-- NOTE RESUME -->
     <section id="resumeContainer" class="row g-0">
-      <div id="resumeTitleBox" class="col-lg-12 col-md-12 col-11 text-center g-0">
+      <div id="resumeTitleBox" class="col-lg-12 col-md-12 col-12 text-center g-0">
         <h1>RESUME</h1>
       </div>
       <div id="resumeRow1" class="col-lg-5 col-11 row g-0">
@@ -148,7 +148,7 @@
         </div>
       </div>
       <div id="resumeRow2" class="col-lg-6 col-11 row g-0">
-        <div id="resumeBox" class="col-12">
+        <div id="resumeBox" class="col-lg-12 col-md-12 col-11">
           <h3 class="resumeTitle">Job Experiences</h3>
           <span class="resumeLabel">IT MANAGER</span>
           <span class="resumeSmallLabel">2021-Present</span>
@@ -181,10 +181,10 @@
         </div>
       </div>
     </section>
-    <div id="gradientSeparatorW"></div>
+    <!-- <div id="gradientSeparatorW"></div> -->
     <!-- NOTE PROJECTS -->
     <section id="projectsContainer" class="row g-0">
-      <div id="projectsTitleBox" class="col-lg-12 col-md-12 col-11 text-center g-0">
+      <div id="projectsTitleBox" class="col-lg-12 col-md-12 col-12 text-center g-0">
         <h1>MY PROJECTS</h1>
       </div>
       <div id="projectBox1" class="col-11">
@@ -236,9 +236,9 @@
     <div id="footerBox">
       <a href="#aboutMeContainer"><div id="anchor">↑</div></a>
       <div id="footerSocials">        
-        <div id="github"></div>
-        <div id="linkedin"></div>
-        <div id="youtube"></div>
+        <a href="https://github.com/marcoselopez" target="_blank"><div id="github"></div></a>
+        <a href="https://www.linkedin.com/in/memmalopez/" target="_blank"><div id="linkedin"></div></a>
+        <a href="https://www.youtube.com" target="_blank"><div id="youtube"></div></a>
       </div>
       <div id="footerRights">
         <span id="footerLogo">ML</span>
