starting on soft skills section

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <span id="separatorPurple"></span>
       </div>
       <div id="aboutSkills" class="col-lg-6 col-md-6 col-sm-11 col-11">
-        <h6 id="titleSkills">Developer Skills</h6>
+        <h6 id="titleSkills">DEVELOPER SKILLS</h6>
         <div id="SkillProgress">
           <span id="subTitle">HTML</span>
           <div class="progress">
@@ -107,7 +107,6 @@
         </div>
       </div>
     </section>
-    <!-- <div id="gradientSeparatorY"></div> -->
     <!-- NOTE RESUME -->
     <section id="resumeContainer" class="row g-0">
       <div id="resumeTitleBox" class="col-lg-12 col-md-12 col-12 text-center g-0">
@@ -181,7 +180,6 @@
         </div>
       </div>
     </section>
-    <!-- <div id="gradientSeparatorW"></div> -->
     <!-- NOTE PROJECTS -->
     <section id="projectsContainer" class="row g-0">
       <div id="projectsTitleBox" class="col-lg-12 col-md-12 col-12 text-center g-0">
@@ -228,6 +226,18 @@
       <a id="navItemFloat" href="#projectsContainer"><div class="">MY PORTFOLIO</div></a>
       <a id="navItemFloat" href="#!"><div class="">SOFT/HARD SKILLS</div></a>
     </div>
+    <!-- NOTE SOFT SKILLS -->
+    <section id="softSkills" class="row g-0">
+      <div id="resumeTitleBox" class="col-lg-12 col-md-12 col-12 text-center g-0">
+        <h1>SOFT SKILLS</h1>
+      </div>
+      <div id="softSkillsContainer" class="col-12">  
+        <div id="softSkillBox"><img id="softSkillImage" src="./images/criticalThinking.svg" alt=""> <h6>CRITICAL THINKING</h6></div>
+        <div id="softSkillBox"></div>
+        <div id="softSkillBox"></div>
+        <div id="softSkillBox"></div>
+      </div>
+    </section>
   </main>
   <!-- NOTE FOOTER -->
   <div id="gradientSeparatorB"></div>
