finishing soft skill mobile section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a href="#aboutMeContainer" id="navItem" class="col-lg-2 col-md-2 col-12"><span>ABOUT ME</span></a>
         <a href="#resumeContainer" id="navItem" class="col-lg-2 col-md-2 col-12"><span>RESUME</span></a>
         <a href="#projectsContainer" id="navItem" class="col-lg-3 col-md-3 col-12"><span>MY PORTFOLIO</span></a>
-        <a href="#!" id="navItem" class="col-lg-3 col-md-3 col-12"><span>SOFT/HARD SKILLS</span></a>
+        <a href="#softSkillsContainer" id="navItem" class="col-lg-3 col-md-3 col-12"><span>SOFT SKILLS</span></a>
       </div>
     </nav>    
   </header>
@@ -109,7 +109,7 @@
     </section>
     <!-- NOTE RESUME -->
     <section id="resumeContainer" class="row g-0">
-      <div id="resumeTitleBox" class="col-lg-12 col-md-12 col-12 text-center g-0">
+      <div id="TitleBox" class="col-lg-12 col-md-12 col-12 text-center g-0">
         <h1>RESUME</h1>
       </div>
       <div id="resumeRow1" class="col-lg-5 col-11 row g-0">
@@ -182,7 +182,7 @@
     </section>
     <!-- NOTE PROJECTS -->
     <section id="projectsContainer" class="row g-0">
-      <div id="projectsTitleBox" class="col-lg-12 col-md-12 col-12 text-center g-0">
+      <div id="TitleBox" class="col-lg-12 col-md-12 col-12 text-center g-0">
         <h1>MY PROJECTS</h1>
       </div>
       <div id="projectBox1" class="col-11">
@@ -228,14 +228,14 @@
     </div>
     <!-- NOTE SOFT SKILLS -->
     <section id="softSkills" class="row g-0">
-      <div id="resumeTitleBox" class="col-lg-12 col-md-12 col-12 text-center g-0">
+      <div id="TitleBox" class="col-lg-12 col-md-12 col-12 text-center g-0">
         <h1>SOFT SKILLS</h1>
       </div>
       <div id="softSkillsContainer" class="col-12">  
-        <div id="softSkillBox"><img id="softSkillImage" src="./images/criticalThinking.svg" alt=""> <h6>CRITICAL THINKING</h6></div>
-        <div id="softSkillBox"></div>
-        <div id="softSkillBox"></div>
-        <div id="softSkillBox"></div>
+        <div id="softSkillBox"><img id="softSkillImage" src="./images/criticalThinking.svg" alt=""> <h6 class="resumeTitle">CRITICAL THINKING</h6><p>Always trying to improve a project by contributing with different ideas and points of view.</p></div>
+        <div id="softSkillBox"><img id="softSkillImage" src="./images/flexibility.svg" alt=""> <h6 class="resumeTitle">FLEXIBILITY</h6><p id="text">Great ability to adapt to any work environment, project or group of people with charisma and respect.</p></div>
+        <div id="softSkillBox"><img id="softSkillImage" src="./images/commitment.svg" alt=""> <h6 class="resumeTitle">COMMITMENT</h6><p id="text">When assigned to a project, I pour every drop of effort to ensure it will achieve the level that's expected.</p></div>
+        <div id="softSkillBox"><img id="softSkillImage" src="./images/teamwork.svg" alt=""> <h6 class="resumeTitle">TEAMWORK</h6><p id="text">Always open to hear opinions from my teammates and try to learn from my fellow colleagues.</p></div>
       </div>
     </section>
   </main>
