minor fix on a project link

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <div id="projectBottomItem1">
           <h5 id="boxContent">OREJITAS CALLEJERAS</h5>
           <h6 id="boxContent">HTML, CSS AND BOOTSTRAP</h6>
-          <div id="lightButton">SEE PROJECT</div>
+          <a href="https://orejitascallejeras.netlify.app" target="_blank"><div id="lightButton">SEE PROJECT</div></a>
         </div>
       </div>
       <hr class="col-8">
